# syllabus-search-app-backend

./: .gitignore  main.py  pyproject.toml  requirements.txt
csv/: kokubun_llm.csv
csv/bijyutsu/: bijyutsu_llm.csv  bijyutsu_授業計画入り.csv
csv/bunkashi/: bunkashi_llm.csv  bunkashi_授業計画入り.csv
csv/eibun/: eibun_llm.csv  eibun_授業計画入り.csv
csv/kokubun/: $$kokubun_llm.csv  $kokubun_llm.csv  kokubun_llm.csv  kokubun_授業計画入り.csv
csv/tetsugaku/: tetsugaku_llm.csv  tetsugaku_授業計画入り.csv
docs/bijyutsu_chroma/: chroma.sqlite3
docs/bunkashi_chroma/: chroma.sqlite3
docs/chroma/: chroma.sqlite3
docs/eibun_chroma/: chroma.sqlite3
docs/kokubun_chroma/: chroma.sqlite3
docs/tetsugaku_chroma/: chroma.sqlite3
document_loading/: bijyutsu.py  bunkashi.py  eibun.py  llm_engine.py  tetsugaku.py
llm/: document_loading.py  llm_engine.py
